Bug 1598278 - Check that Service Worker controls client in navigate() r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D66040